manifests/svc-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: portfolio-service
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
    - name: portfolio-port
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: austin-portfolio

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: portfolio-ingress
  namespace: portfolio
spec:
  rules:
    - host: www.austinbspencer.com
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-service
              servicePort: portfolio-port
    - host: austinbspencer.com
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-service
              servicePort: portfolio-port
